--- a/config-dev.properties
+++ b/config-dev.properties
@@ -1,1 +1,17 @@
 myww=testestsetset
+###############################
+#           数据源的配置                              
+###############################
+jdbc.driverClass=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://192.168.6.75/xf_family?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&rewriteBatchedStatements=true
+jdbc.username=root
+jdbc.password=root
+jdbc.initialSize=5
+jdbc.minIdle=1
+jdbc.maxActive=10
+jdbc.maxWait=60000
+jdbc.timeBetweenEvictionRunsMillis=60000
+jdbc.minEvictableIdleTimeMillis=300000
+jdbc.testWhileIdle=true
+jdbc.testOnBorrow=false
+jdbc.testOnReturn=false
