--- a/config-dev.properties
+++ b/config-dev.properties
@@ -3,8 +3,8 @@ myww=testestsetset
 #           数据源的配置                              
 ###############################
 jdbc.driverClass=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://192.168.6.75/xf_family?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&rewriteBatchedStatements=true
-jdbc.url=jdbc:mysql://192.168.6.75/xf_maint?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&rewriteBatchedStatements=true
+jdbc.url=jdbc:mysql://192.168.6.75/xf_family?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&rewriteBatchedStatements=true
+#jdbc.url=jdbc:mysql://192.168.6.75/xf_maint?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&rewriteBatchedStatements=true
 jdbc.username=root
 jdbc.password=root
 jdbc.initialSize=5
